# cryptopedia-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
.github/workflows/: ci.yml
cryptopedia-client/: build.gradle.kts
cryptopedia-core/: build.gradle.kts
cryptopedia-ex-api/: Dockerfile  build.gradle.kts
cryptopedia-ex-api/src/main/resources/: application.yml  logback-spring.xml
cryptopedia-ex-api/src/test/http/: auth-and-user.http  http-client.env.json
cryptopedia-ex-api/src/test/resources/: application.yml
cryptopedia-ex-batch/: Dockerfile  build.gradle.kts  schema.sql
cryptopedia-ex-batch/src/main/resources/: application-prod.yml  application.yml
docs/: data-ingestion-pipeline.md  rvol-calculation.md  system-architecture.md
frontend/: index.html  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: arbitrage.ts
migrations/: 001_initial_schema.sql
migrations/mysql/: 001_initial_schema.sql
scripts/: oneclick.sh  run.sh  setup.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/database/: connection.rs
src/handlers/: admin_handlers.rs  api_handlers.rs  mod.rs
src/main/resources/: application-prod.yml  application.yml
src/main/resources/static/: http-client.env.json  request.http
src/models/: arbitrage.rs  coin.rs  exchange.rs  exchange_rate.rs  mod.rs
src/services/: arbitrage_service.rs  exchange_rate_service.rs  exchange_service.rs  mod.rs  scheduler_service.rs
src/test/resources/: application.yml
src/utils/: error.rs  mod.rs
(+92 files in other folders)
